--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,4 +1,14 @@
+header {
+    position: relative;
+    top: 0;
+    width: 100%;
+    background-color: #111;
+    z-index: 10;
+    padding: 1rem 0;
+}
+
 h1 {
+    color: #61429e;
     font-family: 'Lugrasimo', cursive;
     font-size: 6em;
     font-style: normal;
@@ -6,6 +16,7 @@ h1 {
 }
 
 h2 {
+    color: #6783bf;
     font-family: 'Macondo', serif;
     font-weight: normal;
     font-style: italic;
